# archivepp

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  codecov.yml
cmake/modules/: CodeCoverage.cmake  Findlibunrar.cmake  Findlibzip.cmake
lib/: CMakeLists.txt
lib/include/archivepp/: archive.hpp  archive_entry.hpp  archive_entry_rar.hpp  archive_entry_zip.hpp  archive_rar.hpp  archive_zip.hpp  basic_archive.hpp  basic_archive_entry.hpp  except.hpp  extensions.hpp  secure_allocator.hpp  string.hpp
lib/src/: archive.cpp  archive_entry_rar.cpp  archive_entry_zip.cpp  archive_rar.cpp  archive_zip.cpp  extensions.cpp  secure_allocator.cpp  string.cpp
tests/: CMakeLists.txt  misc_tests.cpp  rar_tests.cpp  zip_tests.cpp
tests/rar/: archive.rar  archive_encrypted.rar
tests/zip/: archive_no_extension
